<resources>
    <string name="app_name">MemoryKeeper</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="sign_in_button">Sign In</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="forget_password">Forget Password? Click Here</string>
    <string name="email_hint" translatable="false">example@example.com</string>
    <string name="password_hint" translatable="false">*********</string>
    <string name="login_button">Login</string>
    <string name="new_user_text_view">New User? Create New An Account Here</string>
    <string name="slash">/</string>
    <string name="change_language_to_swedish">Change Language to swedish</string>
    <string name="change_language_to_english">Change language to English</string>
    <string name="login_with_google_account">Login with Google account</string>
    <string name="login_with_facebook_account">Login with Facebook account</string>
    <string name="new_password">New Password (At Least 6 Characters)</string>
    <string name="new_password_repeat">Repeat The New Password</string>
    <string name="create_button">Create Account</string>
    <string name="forget_password_text_view">Did you forget the password?</string>
    <string name="verification_code">Verification Code</string>
    <string name="verification_code_hint" translatable="false">12345</string>
    <string name="send_code_text">We have sent you an e-mail with the verification code</string>
    <string name="send">Send</string>
    <string name="logo_description">Logo</string>
    <string name="resend_code_text">Click here to resend the code</string>
    <string name="empty_field">You can\'t send with empty field</string>
    <string name="password_validation_error">The password must be 6–20 characters </string>
    <string name="email_validation_error">The email must contains ( @ and point ).</string>
    <string name="empty_field_error">This field can\'t be empty</string>
    <string name="password_match_error">The passwords don\'t match!</string>
    <string name="firstname">Firstname</string>
    <string name="firstname_hint" translatable="false">Carl</string>
    <string name="lastname">Lastname</string>
    <string name="lastname_hint" translatable="false">Petersson</string>
    <string name="firstname_validation_error">Firstname must be 2-20 characters</string>
    <string name="lastname_validation_error">"The lastname must be 2-20 characters "</string>
    <string name="sign_up_success">Sign Up Success. Verification Link sent to the Email</string>
    <string name="sign_up_error">Sign Up Error, Please Try Again</string>
    <string name="email_not_valid">Your Email is not verified</string>
    <string name="wrong_email_password">The Email OR the Password Is Wrong</string>
    <string name="home_button">Home</string>
    <string name="add_button">Add</string>
    <string name="setting_button">Settings</string>
    <string name="change_language">Change language</string>
    <string name="light_dark_mode">Light/Dark mode</string>
    <string name="change_mode_to_light">Change mode to light</string>
    <string name="change_mode_to_dark">Change mode to dark</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="enter_your_email_text">Please Enter Your Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="forget_password_success">A link to reset your password has been sent to your email</string>
    <string name="page_title">Create A Memory</string>
    <string name="title">Title</string>
    <string name="description">Description:</string>
    <string name="location">Location:</string>
    <string name="date">Date:</string>
    <string name="notification">Notifications:</string>
    <string name="sign_in_error">You have to sign in first to use this function</string>
    <string name="notification_hint">One month</string>
    <string name="date_hint">29-02-2021</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="newest_memories">Newest Memoties</string>
    <string name="download_Errors">cant download just now ,Try again!</string>
    <string name="support_ticket">Support ticket</string>
    <string name="about_us">About us</string>
    <string name="change_password">Change password</string>
    <string name="logout">Logout</string>


</resources>