<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MemoryViewActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/memory_view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_texT_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/title_output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/description_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/description"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description_output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/date_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/date"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date_output"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="TextView"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/location_texT_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/location_output"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="TextView"
            android:textSize="15sp" />


        <Button
            android:id="@+id/update_memory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Update"
            android:visibility="visible"
             />

        <Button
            android:id="@+id/delete_memory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="DELETE"
            android:visibility="visible"
            app:backgroundTint="#FF0000" />

    </LinearLayout>

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
