<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".CreateMemoryActivity">

        <LinearLayout
            android:id="@+id/create_memory_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:layout_margin="5dp"
            tools:ignore="MissingConstraints">


            <TextView
                android:id="@+id/page_title_texT_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-black"
                android:layout_marginTop="10dp"
                android:text="@string/page_title"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/title_texT_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/title"
                />

            <EditText
                android:id="@+id/title_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_texT_view" />

            <TextView
                android:id="@+id/description_texT_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_input"
                android:text="@string/description"
                />

            <EditText
                android:id="@+id/description_input"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:background="@drawable/edit_text_border"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_texT_view" />

            <TextView
                android:id="@+id/location_texT_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location" />

            <EditText
                android:id="@+id/location_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location_texT_view" />

            <TextView
                android:id="@+id/date_texT_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date" />

            <EditText
                android:id="@+id/date_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_texT_view" />

            <TextView
                android:id="@+id/notification_texT_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notification" />

            <EditText
                android:id="@+id/notification_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notification_texT_view" />

            <ImageView
                android:id="@+id/image_View"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/ic_image"
                app:layout_constraintBottom_toTopOf="@id/gallery_image_Button"
                />
        </LinearLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gallery_image_Button"

            />

        <ImageButton
            android:id="@+id/gallery_image_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_facebook"
            android:layout_margin="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_memory_linear_layout"
             />

        <ImageButton
            android:id="@+id/camera_image_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_google"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="5dp"
            app:layout_constraintTop_toBottomOf="@id/create_memory_linear_layout"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>



